tests/integration/subgraph/snapshots/main__integration__subgraph__check__subgraph_check_background_submits_the_check_and_does_not_wait_for_it.snap
---
source: tests/integration/subgraph/check.rs
expression: json
---
{
  "json_version": "1",
  "data": {
    "target_url": "https://studio.apollographql.com/graph/my-graph/checks/1",
    "workflow_id": "workflow-1",
    "success": true
  },
  "error": null
}
