tests/integration/subgraph/snapshots/main__integration__subgraph__check__subgraph_check_fails_on_blocking_downstream_contract_failure.snap
---
source: tests/integration/subgraph/check.rs
expression: json
---
{
  "json_version": "3",
  "data": {
    "core_schema_modified": false,
    "tasks": {
      "downstream": {
        "task_status": "FAILED",
        "target_url": "https://studio.apollographql.com/graph/my-graph/checks/downstream",
        "variants": [
          {
            "graph_id": "my-graph",
            "variant_name": "mobile",
            "blocking": true,
            "fails_upstream_workflow": null,
            "status": "FAILED"
          }
        ]
      }
    },
    "success": false
  },
  "error": {
    "message": "The changes in the schema you proposed caused downstream checks to fail.",
    "code": "E043"
  }
}
