tests/integration/subgraph/snapshots/main__integration__subgraph__check__subgraph_check_ignores_a_blocking_contract_failure_unless_contract_checks_are_included.snap
---
source: tests/integration/subgraph/check.rs
expression: json
---
{
  "json_version": "3",
  "data": {
    "core_schema_modified": false,
    "tasks": {
      "downstream": {
        "task_status": "PASSED",
        "target_url": "https://studio.apollographql.com/graph/my-graph/checks/downstream",
        "variants": [
          {
            "graph_id": "my-graph",
            "variant_name": "mobile",
            "blocking": true,
            "fails_upstream_workflow": null,
            "status": "FAILED"
          }
        ]
      }
    },
    "success": true
  },
  "error": null
}
