tests/integration/subgraph/snapshots/main__integration__subgraph__check__subgraph_check_succeeds_despite_non_blocking_task_status_failure.snap
---
source: tests/integration/subgraph/check.rs
expression: json
---
{
  "json_version": "3",
  "data": {
    "core_schema_modified": false,
    "tasks": {
      "downstream": {
        "task_status": "FAILED",
        "target_url": "https://studio.apollographql.com/graph/my-graph/checks/downstream",
        "variants": [
          {
            "graph_id": "my-graph",
            "variant_name": "mobile",
            "blocking": false,
            "fails_upstream_workflow": false,
            "status": "FAILED"
          }
        ]
      }
    },
    "success": true
  },
  "error": null
}
